fixed a reference of section title

--- a/bash.1
+++ b/bash.1
@@ -4147,7 +4147,7 @@ with the \fBtest\fP command for POSIX conformance.
 .IP 3.
 リダイレクションが前述の
 .SM
-.BR リダイレクション
+.BR リダイレクト
 で説明したように実行されます。
 .IP 4.
 変数代入の \fB=\fP の後にあるテキストに対して、チルダ展開、
