fixed a reference of section title

--- a/bash.1
+++ b/bash.1
@@ -2344,7 +2344,7 @@ If set, \fBbash\fP uses its value as the name of a directory in which
 2 文字または 3 文字で、
 履歴の展開とトークン分割 (後述の
 .SM
-.B 履歴展開
+.B 履歴の展開
 を参照) を制御します。
 最初の文字は \fI履歴展開 (history expansion)\fP 文字であり、
 履歴展開の先頭を示す文字です。通常、これは `\fB!\fP' です。
